<resources>
    <string name="app_name">TAXI</string>
    <string name="title_map">Найти авто</string>
    <string name="title_history">История</string>
    <string name="title_notifications">Заявки</string>
    <string name="login">Авторизоваться</string>
    <string name="registration_name">ФИО</string>
    <string name="registration_staff">Должность</string>
    <string name="registration_email">Email</string>
    <string name="registration_corp_email">Корпоративный email</string>
    <string name="registration_auto">Автомобиль</string>
    <string name="registration_auto_model">Модель</string>
    <string name="registration_auto_vin">VIN</string>
    <string name="registration_auto_number">Госномер</string>
    <string name="registration_employee">Пользователь</string>
    <string name="registration">Зарегистрировать</string>
    <string name="registration_tel">Телефон</string>
    <string name="title_user">Кабинет</string>
    <string name="order_data">Выберите дату и время поездки</string>
    <string name="order_performong_data">Дату и время поездки</string>
    <string name="order_from">Откуда</string>
    <string name="order_to">Куда</string>
    <string name="order_purpose">Цель поездки</string>
    <string name="order_comment">Комментарий</string>
    <string name="order">Забронировать</string>
    <string name="accept_order">Принять</string>
    <string name="action_exit">Выход</string>
    <string name="registration_car">Автомобиль</string>
    <string name="registration_car_number">Госномер</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_home">Home</string>
    <string name="history_accept_date">Время принятия заявки</string>
    <string name="order_time">Время</string>
    <string name="order_fuel">Расход топлива</string>
    <string name="order_distance">Расстояние</string>
    <string name="logout">Выход</string>
    <string name="performer">Водитель</string>
    <string name="customer">Заказчик</string>


    <string name="order_completed">Завершить</string>
    <string name="action_send">Обратная связь</string>
    <string name="feedback_send">Отправить</string>
    <string name="order_now">Сегодня</string>
    <string name="order_tomorrow">Завтра</string>
    <string name="data_name">Дата</string>
    <string name="title_activity_customer_v2">CustomerV2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fleet management</string>
    <string name="nav_header_subtitle">iskolnikov1809@gmail.com</string>
    <string name="nav_header_desc">Заголовок навигации</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_cabinet">Личный кабинет</string>

    <string name="home_second">Home Second</string>
    <string name="cancel_sheet_reason1">Причина 1</string>
    <string name="cancel_sheet_reason2">Причина 2</string>
    <string name="cancel_sheet_reason4">Причина 4</string>
    <string name="cancel_sheet_reason3">Причина 3</string>
    <string name="cancel_sheet_reason_other_text">Введите причину отмены</string>
    <string name="cancel_sheet_reason_other_title">Причина отмены заказа</string>
    <string name="cancel_sheet_reason_other">Отменить</string>
    <string name="saveprofile">Сохранить</string>
    <string name="user_state_bottom_sheet_title">Внимание! Состояние будет изменено</string>
    <string name="user_state_sheet_1">Свободен</string>
    <string name="user_state_sheet_2">Занят</string>
    <string name="user_state_sheet_3">Ремонт</string>
    <string name="order_cancel_reason">Причина отмены</string>
    <string name="cancel_sheet_reason_performer1">Причина 1</string>
    <string name="cancel_sheet_reason_performer2">Причина 2</string>
    <string name="select_direction_bottom_sheet_title">Выбор направления</string>
    <string name="select_direction_short">По городу</string>
    <string name="select_direction_far">За город</string>

    <string name="action_state">Состояние</string>
    <string name="action_isonline">Онлайн</string>
  <string name="history_item_close_date">Заказ закрыт</string>
    <string name="navigate">Построить маршрут</string>
    <string name="order_cancel">Отменить</string>
    <string name="bottom_sheet_peek">bottom_sheet_peek</string>
    <string name="bottom_sheet_content">bottom_sheet_content</string>
</resources>
