<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_notifications"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_view_list"
            android:title="@string/title_history" />
        <item
            android:id="@+id/nav_cabinet"
            android:icon="@drawable/ic_person"
            android:title="@string/title_cabinet" />

    </group>

    <item android:title="Система">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/action_exit" />
        </menu>

    </item>

</menu>
