<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.ru.test.issuedriver.customer.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ru.test.issuedriver.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ru.test.issuedriver.customer.ui.orders_list.OrdersListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_orders_list"/>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.ru.test.issuedriver.registration.RegistrationFragment"
        android:label="@string/title_user"
        tools:layout="@layout/activity_registration" />
</navigation>
