<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_name"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/order_performong_data">

                <TextView
                    android:id="@+id/order_data"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/order_data"
                    android:inputType="text|datetime"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                    android:textSize="18sp"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_car"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/registration_car"

                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_carnumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:hint="@string/registration_car_number"

                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_from"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_to"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_purpose"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_comment"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

            <TextView
                android:id="@+id/order_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="log"
                android:layout_margin="10dp"
                android:visibility="gone"/>

        <Button
            android:id="@+id/order_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/rounded_blue"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/order_time" />
                        <Chronometer
                            android:id="@+id/order_chronometr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="10sp"
                            android:text="00:00"
                            android:textStyle="bold"
                            android:textColor="@android:color/holo_red_dark"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:cardElevation="3dp"
                    android:layout_margin="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/order_distance"
                            android:layout_marginHorizontal="5dp"/>
                        <TextView
                            android:id="@+id/order_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="10sp"
                            android:textStyle="bold"
                            android:text="0 м"
                            android:textColor="@android:color/holo_red_dark"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        <Button
            android:id="@+id/order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/order_completed"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>