<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/user_state_bottom_sheet_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textAlignment="gravity"
            android:gravity="center">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_state_sheet_0"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@android:color/holo_green_light"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                android:textColor="@android:color/white"
                android:text="@string/user_state_sheet_1"
                android:layout_margin="5dp" />
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_state_sheet_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="#FF0000"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:textColor="@android:color/white"
            android:text="@string/user_state_sheet_2"
            android:layout_margin="5dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_state_sheet_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:textColor="@android:color/white"
            android:text="@string/user_state_sheet_3"
            android:layout_margin="5dp" />
    </androidx.cardview.widget.CardView>



</LinearLayout>