<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/select_direction_bottom_sheet_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textAlignment="gravity"
        android:gravity="center">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/select_direction_short"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            app:cardElevation="2dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:text="@string/select_direction_short"
                android:layout_margin="5dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_direction_far"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            app:cardElevation="2dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:text="@string/select_direction_far"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</LinearLayout>